# tap-imis

./: .gitignore  README.md  pyproject.toml
tap_imis/: __init__.py  auth.py  client.py  schema_inference.py  streams.py  tap.py
