[tool.poetry]
name = "tap-imis"
version = "0.0.1"
description = "Singer tap for IMIS, built with Singer SDK."
readme = "README.md"
authors = ["hotglue <hello@hotglue.io>"]
keywords = [
    "ELT",
    "IMIS",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7"
importlib-resources = { version = "==6.4.*", python = "<3.9" }
singer-sdk = { version="~=0.5.0", extras = [] }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.25.1"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.pytest.ini_options]
addopts = '--durations=10'

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[tool.ruff]
src = ["tap_imis"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_imis"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-imis = 'tap_imis.tap:TapImis.cli'
